# chatGPT-vue3-fastapi

./: .gitignore  README.md
api/: .gitignore  README.md  pyproject.toml
api/babygirl_agi_api/: main.py
api/database/: tiny_db.py
api/helpers/: chat_helper.py  database.py  models.py  openapi.py  prompts.py  utils.py
babyagi/: pyproject.toml
babygirl-agi-vite/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vue.config.js
babygirl-agi-vite/src/: App.vue  main.js  store.js
babygirl-agi-vite/src/api/: babygirl-api.js
babygirl-agi-vite/src/components/: Chat.vue  ConversationButton.vue  Conversations.vue  NavBar.vue
