[tool.poetry]
name = "babygirl-agi-api"
version = "0.1.0"
description = ""
authors = ["Albert Schweitzer <schweitzer.albert@gmail.com>"]
readme = "README.md"
packages = [{include = "babygirl_agi_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
requests = "^2.28.2"
openai = "^0.27.4"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sseclient-py = "^1.7.2"
tinydb = "^4.7.1"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
